move stuff and fix stuff